# prboom-plus

.github/workflows/: build_dumb.yml  continuous_integration.yml  copy_dependencies.cmd  windows_dependencies.yml
.github/workflows/dumb/: fix-cflags.patch  msvc-build-fixes.patch  msvc-no-libm.patch  portfile.cmake
prboom2/: CMakeLists.txt
prboom2/cmake/: FindSDL2.cmake  TargetArch.cmake  config.h.cin
prboom2/data/: CMakeLists.txt
prboom2/src/: CMakeLists.txt
prboom2/src/SDL/: SDL_windows_main.c
scripts/: macos_build_environment.py
